# odoo-hackthon

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  api.py
backend/src/background/: __init__.py
backend/src/constants/: __init__.py  auth.py  enterprise.py
backend/src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/src/dependencies/: __init__.py  auth.py
backend/src/middleware/: auth_context.py  request_context.py
backend/src/models/: __init__.py  audit.py  auth.py  driver.py  expense.py  fuel.py  maintenance.py  notification.py  trip.py  vehicle.py
backend/src/repositories/: __init__.py  audit.py  auth.py  driver.py  expense.py  fuel.py  maintenance.py  notification.py  search.py  trip.py  vehicle.py
backend/src/schemas/: __init__.py  audit.py  auth.py  common.py  dashboard.py  driver.py  expense.py  fuel.py  maintenance.py  notification.py  reports.py  search.py  timeline.py  trip.py  vehicle.py
backend/src/services/: __init__.py  (+14 more)
backend/tests/: __init__.py  test_auth_api.py  test_auth_service.py  test_dashboard_service.py  test_driver_api.py  test_driver_service.py  test_driver_validation.py  test_enterprise_control_plane.py  test_fuel_service.py  test_health.py  test_maintenance_api.py  test_maintenance_rbac.py  test_maintenance_service.py  test_maintenance_validation.py  test_rbac.py  test_reports_service.py  test_tokens.py  test_trip_api.py  test_trip_service.py  test_trip_validation.py  test_vehicle_api.py  test_vehicle_service.py  test_vehicle_validation.py
(+36 files in other folders)
