[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transitops-backend"
version = "0.1.0"
description = "TransitOps - Smart Transport Operations Platform backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=1.29.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "motor>=3.6.0",
    "orjson>=3.10.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.8.0",
    "PyJWT>=2.9.0",
    "python-json-logger>=3.2.1",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "httpx>=0.27.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.6.8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
